[tool.poetry]
name = "sphinx-argparse"
version = "0.4.0a1"
description = "A sphinx extension that automatically documents argparse commands and options"
readme = "README.md"
repository = "https://github.com/ashb/sphinx-argparse"
authors = ["Ash Berlin-Taylor <ash_github@firemirror.com>"]
license = "MIT"
classifiers = [
  "Framework :: Sphinx :: Extension",
]
packages = [
  { include = "sphinxarg" },
  { include = "test", format = "sdist" },
]

[tool.poetry.dependencies]
python = ">=3.7"
sphinx = ">=1.2.0"
CommonMark = { version = ">=0.5.6", optional = true }

[tool.poetry.extras]
markdown = ["CommonMark"]

[tool.poetry.group.dev.dependencies]
flake8 = "^5"
pytest = "*"
pytest-cov = "^2.7"
pytest-deadfixtures = "^2.2.1"
flake8-bugbear = "^22"
black = {version = "^22", python = ">=3.6.2"}
mypy = "^0.910"
types-docutils = "^0.17.0"
pep8-naming = "^0.8.2"

[tool.poetry.group.dev.dependencies.isort]
version = "^5.10"
markers = "python_version < '4.0'"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 160
skip-string-normalization = true

[tool.isort]
balanced_wrapping = true
default_section = "THIRDPARTY"
include_trailing_comma = true
known_first_party = [ "sphinxarg", "test" ]
line_length = 160
multi_line_output = 3

[[tool.mypy.overrides]]
module = [
  "commonmark.*",
  "CommonMark.*",
  "docutils.parsers.rst.directives",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "--strict-markers --tb=short"

[tool.coverage.run]
omit = ["tests/*","**/__main__.py"]
branch = true
